# pico-climate

./: CMakeLists.txt  README.md  i2c_scan.c  main.c
bme680/: CMakeLists.txt
bsec/: CMakeLists.txt
